// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`thread-message-feed index closed - matches snapshot 1`] = `
<div
  class="js-thread-message-feed-root root"
>
  <!---->
</div>
`;

exports[`thread-message-feed index dark theme - matches snapshot 1`] = `
<div
  class="js-thread-message-feed-root root opened dark-theme"
>
  <section
    class="body"
  >
    <thread-header-stub />
     
    <section
      class="content"
    >
      <div
        class="chat-messages"
      >
        <chat-item-stub
          message="[object Object]"
          threadmessagefeed="true"
        />
      </div>
       
      <chat-input-stub
        roommember="true"
        thread="true"
        user="[object Object]"
      />
    </section>
  </section>
</div>
`;

exports[`thread-message-feed index opened - matches snapshot 1`] = `
<div
  class="js-thread-message-feed-root root opened"
>
  <section
    class="body"
  >
    <thread-header-stub />
     
    <section
      class="content"
    >
      <div
        class="chat-messages"
      >
        <chat-item-stub
          message="[object Object]"
          threadmessagefeed="true"
        />
      </div>
       
      <chat-input-stub
        roommember="true"
        thread="true"
        user="[object Object]"
      />
    </section>
  </section>
</div>
`;
